fa/style.css
/* ... */
#skills-tile {
  width: 50%;
  height: 420px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-end;
  border-top: solid 1px var(--minor);
}
#expertize-title {
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
#expertize-title h2 {
  transform: translateY(-20px);
  padding: 2px 0;
  width: 315px;
  border-radius: 10px;
  border: dashed 2px var(--minor);
  background-color: var(--major);
  font-size: 22px;
}
#card-container1 {
  z-index: 1;
  transform: translateY(-15px);
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.cards1{
  margin: 8px 8px 2px 8px;
}
.cards1:hover {
  transform: translateY(-2px);
}
.cards1:active {
  transform: translateY(-8px);
}
#experiences-title {
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
#experiences-title h2 {
  transform: translateY(-15px);
  margin: 5px 0;
  padding: 2px 0;
  width: 315px;
  font-size: 22px;
  border-radius: 10px;
  border: dashed 2px var(--minor);
}
#card-container3 {
  z-index: 1;
  transform: translateY(-15px);
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.cards3 {
  margin: 8px;
}
.cards3:hover {
  transform: translateY(-2px);
}
.cards3:active {
  transform: translateY(-8px);
}
#card-container4 {
  z-index: 1;
  transform: translateY(-20px);
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.cards4 {
  margin: 8px;
}
.cards4:hover {
  transform: translateY(-2px);
}
.cards4:active {
  transform: translateY(-8px);
}
#mysql-card {
  margin:  0 16px;
}
#card-container5 {
  z-index: 1;
  transform: translateY(-15px);
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.cards5 {
  margin: 8px 8px 11px 8px;
}
.cards5:hover {
  transform: translateY(-2px);
}
.cards5:active {
  transform: translateY(-8px);
}

/* Projects Section----------------------------------------------------------*/
#tile3 {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  border-top: solid 1px var(--minor);
}

#projects-tile {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

#projects-tile > h2 {
  transform: translateY(-20px);
  padding: 2px 0;
  width: 315px;
  border-radius: 10px;
  border: dashed 2px var(--minor);
  text-align: center;
  font-size: 22px; 
  background-color: var(--major);
}

#project-box-container {
  width: 100%;
  display: flex;
  flex-direction: column-reverse ;
  justify-content: center;
  align-items: center;
}

.project-box {
  margin: 25px 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--accent);
  color: var(--minor);
}

.project-content {
  margin: 10px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.project-title {
  width: 100%;
  text-align: center;
  font-size: 22px;
  font-weight: bold;
}

.project-used-tech {
  margin-top: 5px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.used-tech {
  margin: 0 5px;
  font-weight: bold;
  font-size: 17px;
}

#html-txt {
  color: #e65100;
}

#css-txt {
  color: #2965f1;
}

#javascript-txt {
  color: #a99813;
}

.project-description {
  padding: 10px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 18px;
}

.project-img-container {
  width: 750px;
}

.project-github-btn {
  cursor: pointer;
  margin: 10px 0;
  padding: 5px 10px;
  border: dashed 1px var(--minor);
  border-radius: 20px;
  background-color: var(--major);
  font-weight: bold;
}
.project-github-btn:hover {
  background-color: var(--accent);
}

/* Contact Section-----------------------------------------------------------*/
#contact-tile {
  margin-top: 50px;
  width: 100%;
  height: 600px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  border-top: solid 1px var(--minor);
}
#contact-tile h2{
  transform: translateY(-20px);
  margin-bottom: 8px;
  padding: 2px 0;
  width: 315px;
  border-radius: 10px;
  border: dashed 2px var(--minor);
  background-color: var(--major);
  text-align: center;
  font-size: 22px; 
}
#contact-form {
  width: 260px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  border-radius: 10px;
}
#contact-form input {
  margin-top: 15px;
  width: 260px;
  height: 30px;
  text-align: center;
  border-radius: 10px;
  border: solid 1px var(--minor);
  background-color: var(--major);
  color: var(--minor);
}
#form-message {
  margin-top: 15px;
  width: 100%;
  border-radius: 10px;
  text-align: center;
  border: solid 1px var(--minor);
  background-color: var(--major);
  color: var(--minor);
}
#submit-btn {
  margin: 15px 0;
  width: 100px;
  height: 40px;
  border-radius: 10px;
  border: dashed 1px var(--minor);
  background-color: var(--major);
  color: var(--minor);
  font-size: 16px;
}
#submit-btn:hover {
  cursor: pointer;
  background-color: var(--hover);
}
#submit-btn:active {
  background-color: var(--active);
}
#socials {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.social {
  margin: 0 10px;
  width: 50px;
  height: 50px;
}

/* Floating Go to top and Contact button-------------------------------------*/
#top-btn {
  z-index: 2;
  display: none;
  position: fixed;
  padding: 9px 7px 5px 7px;
  bottom: 75px;
  right: 15px;
  outline: none;
  border: dashed 1px var(--minor);
  background-color: var(--major);
  border-radius: 20px;
}
#top-btn:hover {
  cursor: pointer;
  background-color: var(--hover);
}
#top-btn:active {
  transition: 0s;
  background-color: var(--active);
}
/* ... */

